--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/2000/svg">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Error 404</title>
 <style type="text/css">
 @import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
