--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,30 +1,34 @@
 @charset "utf-8";
 
 .flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+a {
+	text-decoration : none;	
 }
 
 .zoom {
-  padding: 10px;
-  background-color: #fff;
-  text-align: center;
-  transition: transform .2s;
-  width: 160px;
-  height: 200px;
-  margin: 10px;
-  line-height: 55px;
-  font-size: 30px;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
+	padding: 10px;
+	border: 1px solid rgb(229, 232, 235);
+	background-color: #fff;
+	text-align: center;
+	width: 160px;
+	height: 200px;
+	margin: 10px;
+	color: rgb(53, 56, 64); 
+	cursor : pointer; 
+	font-size : 20px; 
+	font-weight: 600; 
+	font-family : Poppins, sans-serif; 
+	place-self : center;
+	border-radius: 10px;
 }
 
 .zoom:hover {
-  -ms-transform: scale(1.1); /* IE 9 */
-  -webkit-transform: scale(1.1); /* Safari 3-8 */
-  transform: scale(1.1);
-  background-image: linear-gradient(to right,#b92b27,#1565C0); 
+	box-shadow: rgb(4 17 29/ 25%) 0px 0px 8px 0px;
+	transition: all 0.1s ease 0s;
+	border-radius: 14px;
 }
