--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -8,11 +8,49 @@
 	<h1>Welcome to [[${companyName}]]</h1>
 	</div>
 	<div class="flex-container">
+<!-- 
   <div class="zoom"><a th:href="@{/findDaybook}">Daybook</a></div>
   <div class="zoom"><a th:href="@{/findLedger}">Ledger</a></div>
   <div class="zoom"><a th:href="@{/findTrialBal}">Trial Balance</a></div>
-  <div class="zoom"><a th:href="@{/findTradingPL}">Trading - Profit and Loss</a></div>
-  <div class="zoom"><a th:href="@{/findBalSheet}">Balance Sheet</a></div>
+  <div class="zoom"><a th:href="@{/findTradingPL}">Trading P&amp;L</a></div>
+  <div class="zoom"><a th:href="@{/findBalSheet}">Balance Sheet</a></div>   -->
+  
+   <a class="zoom" th:href="@{/findDaybook}">
+        <div class="title">
+            <div>
+                <span>Daybook</span>
+            </div>
+        </div>
+    </a>
+    <a class="zoom" th:href="@{/findLedger}">
+        <div class="title">
+            <div>
+                <span>Ledger</span>
+            </div>
+        </div>
+    </a>
+    <a class="zoom" th:href="@{/findTrialBal}">
+        <div class="title">
+            <div>
+                <span>Trial Balance</span>
+            </div>
+        </div>
+    </a>
+    <a class="zoom" th:href="@{/findTradingPL}">
+        <div class="title">
+            <div>
+                <span>Trading P&amp;L</span>
+            </div>
+        </div>
+    </a>
+    <a class="zoom" th:href="@{/findBalSheet}">
+        <div class="title">
+            <div>
+                <span>Balance Sheet</span>
+            </div>
+        </div>
+    </a>
+  
 	</div>
 </body>
 </html>
