--- a/src/main/resources/templates/upload_db.html
+++ b/src/main/resources/templates/upload_db.html
@@ -9,10 +9,10 @@
 		<div class="row">
 			<div class="col-lg-4"></div>
 			<div class="col-lg-4">
-		<form th:action="@{/uploaded}" th:object="${mdbUploadModel}" enctype="multipart/form-data" method="post">
+		<form th:action="@{/uploaded}" enctype="multipart/form-data" method="post">
 			<div class="form-group">
 				<label for="exampleFormControlFile1">Select Database file</label>
-				<input type="file" class="form-control-file" id="exampleFormControlFile1" th:field="*{file}">
+				<input type="file" class="form-control-file" id="exampleFormControlFile1" name="file">
 			</div>
 			<button type="submit" class="btn btn-success">Upload</button>
 		</form>
