--- a/src/main/resources/templates/year_select.html
+++ b/src/main/resources/templates/year_select.html
@@ -9,14 +9,12 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<form id="formid" th:action="@{/StoreCompany}"
-				th:object="${companySelectCriteria}" method="post">
+			<form id="formid" th:action="@{/StoreCompany}" method="post">
 				<div class="col-xs-7 col-sm-6 col-lg-7">
 					<fieldset>
 						<legend>Select Year</legend>
 						<div class="form-group col-xs-8">
-							<select class="form-control" id="years"
-								name="cid" size="10">
+							<select class="form-control" id="years" name="cid" size="10">
 								<option th:each="entry : ${years}" th:value="${entry.key}"
 									th:text="${entry.value}">WIREFRAME</option>
 							</select>
@@ -24,9 +22,10 @@
 					</fieldset>
 				</div>
 				<div class="form-group  col-xs-10">
-							<button class="btn btn-success" type="submit">Submit</button>
-							<button class="btn btn-danger" type="button" onclick="window.history.back()" value="Close">Close</button>
-						</div>
+					<button class="btn btn-success" type="submit">Submit</button>
+					<button class="btn btn-danger" type="button"
+						onclick="window.history.back()" value="Close">Close</button>
+				</div>
 			</form>
 		</div>
 	</div>
