--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <body>
   	<div th:replace = "fragments::index-navbar"> </div>  
 	<div class="container text-center">
-	<h1>Welcome to CrDr</h1>
+	<h1>CrDr for financial accounting</h1>
 	</div>
 	<div class="flex-container">
   <div class="zoom"><a th:href="@{/login}">Login</a></div>
