--- a/src/main/resources/templates/company_select.html
+++ b/src/main/resources/templates/company_select.html
@@ -5,7 +5,7 @@
 <body>
 	<div th:replace="fragments::cs-navbar"></div>
 	<div class="container text-center">
-		<h1>Welcome to CrDr</h1>
+		<h1>CrDr - Trident's Software</h1>
 	</div>
 	<div class="container">
 		<div class="row">
