--- a/src/main/resources/templates/company_select.html
+++ b/src/main/resources/templates/company_select.html
@@ -11,14 +11,25 @@
 		<div class="row">
 			<form id="formid" th:action="@{/companyselect}"
 				th:object="${yearCriteria}" method="post">
-				<div class="col-xs-7 col-sm-6 col-lg-7">
+				<div class="col-xs-6 col-sm-6 col-lg-6">
 					<fieldset>
 						<legend>Open Company</legend>
-						<div class="form-group col-xs-8">
+						<div class="form-group col-xs-6">
 							<select class="form-control" id="companies"
 								name="companyName" size="10">
 								<option th:each="company : ${companies}" th:value="${company}"
 									th:text="${company}">WIREFRAME</option>
+							</select>
+						</div>
+					</fieldset>
+				</div>
+				<div class="col-xs-6 col-sm-6 col-lg-6">
+					<fieldset>
+						<legend>Select Year</legend>
+						<div class="form-group col-xs-6">
+							<select class="form-control" id="years"
+								name="year" size="10">
+								<option id ="yearholder"></option>
 							</select>
 						</div>
 					</fieldset>
@@ -30,5 +41,6 @@
 			</form>
 		</div>
 	</div>
+	<script th:src ="@{/script/company-select.js}"></script>
 </body>
 </html>
