--- a/src/main/resources/templates/delete_users.html
+++ b/src/main/resources/templates/delete_users.html
@@ -7,7 +7,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-10">
-				<h1 align="center">List of Users</h1>
+				<h1>List of Users</h1>
 				<div class="flex-container">
 					<table style="width: 80%"
 						class="table table-striped table-bordered">
@@ -31,22 +31,21 @@
 				</div>
 			</div>
 			<div class="col-sm-2">
-			<span></span><span></span><span></span>
-				<form th:action="@{/process_delete_user}" th:object="${adminForm}"
-							method="post">
-							<div class="form-group">
-								<label for="userId" class="col-4 col-form-label">User
-									ID: </label>
-								<div class="col-8">
-									<input type="number" th:field="*{userId}" class="form-control" placeholder="Enter UserID.."
-										required min="10" max="10000"/>
-								</div>
-							</div>
+				<span></span><span></span><span></span>
+				<form th:action="@{/process_delete_user}" method="post">
+					<div class="form-group">
+						<label for="userId" class="col-4 col-form-label">User ID:
+						</label>
+						<div class="col-8">
+							<input type="number" class="form-control" name="userId"
+								placeholder="Enter UserID.." required min="10" max="10000" />
+						</div>
+					</div>
 
-							<div>
-								<button type="submit" class="btn btn-primary">Submit</button>
-							</div>
-						</form>
+					<div>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
