--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -8,7 +8,8 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<blockquote class="blockquote text-center">
-					<p class="mb-0">[[${message}]]</p>
+					<h2 class="mb-0">[[${message}]]</h2>
+					<button type="button" class="btn btn-danger" onclick="window.history.back()" value="Close"	>Back</button>
 				</blockquote>
 			</div>
 		</div>
